SUBDIRS = imprenta-e impresor-e imprenta-e-tools ejemplos doc
#
#imprenta_e_toolsdir = ${prefix}/lib/imprenta-e-tools
#
#imprenta_e_confdir = ${prefix}/etc/imprenta-e
#
#imprenta_e_omfdir = ${prefix}/share/imprenta-e/omf
#
#imprenta_e_dtddir = ${prefix}/share/imprenta-e/DTD
#
#imprenta_e_xsldir = ${prefix}/share/imprenta-e/XSLT
#
#imprenta_e_mandir = ${prefix}/share/man/man1

EXTRA_DIST = \
	imprenta-e.spec

#install-data-local:
#	$(mkinstalldirs) $(imprenta_e_toolsdir)
##	$(mkinstalldirs) $(imprenta_e_omfdir)
##	$(mkinstalldirs) $(imprenta_e_dtddir)
##	$(mkinstalldirs) $(imprenta_e_xsldir)
#	$(mkinstalldirs) $(imprenta_e_mandir)
#	
#uninstall-local:
#	rm -rf $(imprenta_e_toolsdir)
#	rm -rf $(imprenta_e_omfdir)
#	rm -rf $(imprenta_e_dtddir)
#	rm -rf $(imprenta_e_xsldir)
#	rm -rf $(imprenta_e_mandir)
#