AC_INIT(configure.in)

PACKAGE=imprenta-e
AM_INIT_AUTOMAKE($PACKAGE, 0.2)

dnl *******************
dnl Checking for perl
dnl *******************
AC_CHECK_PROG(PERL, perl, yes, no)
if test x$PERL = xno; then
	AC_MSG_ERROR(perl not found)
fi

dnl **********************************
dnl Checking for perl-libxml-enno
dnl **********************************
AC_MSG_CHECKING(for perl-libxml-enno module)
AC_PATH_PROG(DOM, DOM.pm, yes, no)
if test x$DOM = xno; then
	AC_MSG_ERROR(perl-libxml-enno not found)
fi

dnl **********************************
dnl Checking for perl-XML-RSS
dnl **********************************
AC_MSG_CHECKING(for perl-XML-RSS module)
AC_PATH_PROG(DOM, RSS.pm, yes, no)
if test x$DOM = xno; then
	AC_MSG_ERROR(perl-XML-RSS not found)
fi

dnl **********************************
dnl Checking for perl-Unicode-MapUTF8
dnl **********************************
AC_MSG_CHECKING(for perl-Unicode-MapUTF8 module)
AC_PATH_PROG(DOM, MapUTF8.pm, yes, no)
if test x$DOM = xno; then
	AC_MSG_ERROR(perl-Unicode-MapUTF8 not found)
fi

dnl **********************************
dnl Checking for docbook-utils version
dnl **********************************
AC_MSG_CHECKING(for DocBook-utils >= 0.6.11)
if jw -v > /dev/null 2>&1; then
	version=`jw -v | sed -e "s/DocBook-utils version//" | \
	sed -e "s/(jw version 1.1)//" | \
	awk 'BEGIN { FS = "0."; } { print $1 * 1000 + $2 * 100;}'`

    if test "$version" -ge 611; then
        AC_MSG_RESULT(found)
    else
        AC_MSG_ERROR(You need at least DocBook-utils 0.6.11)
    fi
else
    AC_MSG_ERROR(Not DocBook-utils installed)
fi

dnl *******************
dnl Checking for db2pdf
dnl *******************
AC_CHECK_PROG(DB2PDF, db2pdf, yes, no)
if test x$DB2PDF = xno; then
	AC_MSG_ERROR(db2pdf not found)
fi

dnl *******************
dnl Checking for ps2pdf
dnl *******************
AC_CHECK_PROG(PS2PDF, ps2pdf, yes, no)
if test x$PS2PDF = xno; then
	AC_MSG_ERROR(ps2pdf not found)
fi

dnl *******************
dnl Checking for xsltproc
dnl *******************
AC_CHECK_PROG(SABCMD, xsltproc, yes, no)
if test x$SABCMD = xno; then
	AC_MSG_ERROR(xsltproc not found)
fi

dnl *******************
dnl Checking for xmlto
dnl *******************
AC_CHECK_PROG(SABCMD, xmlto, yes, no)
if test x$SABCMD = xno; then
	AC_MSG_ERROR(xmlto not found)
fi

AC_OUTPUT([
Makefile
imprenta-e/Makefile
imprenta-e/imprenta-e
impresor-e/Makefile
impresor-e/impresor-e
imprenta-e-tools/Makefile
imprenta-e-tools/Printer/Makefile
imprenta-e-tools/Utils/Makefile
ejemplos/Makefile
ejemplos/omf/Makefile
ejemplos/dtd/Makefile
ejemplos/xslt/Makefile
ejemplos/conf/Makefile
doc/Makefile
imprenta-e.spec
])
